TypedLama/regression/compile_error/test011.4.lama
-- check static type conformity of functions
-- both arity and return type mismatch
wrong_arrow :: (Int, A) -> B -> Str;
fun wrong_arrow(i, a, b) {
  "kek"
}